unpackaged/main/default/objects/Sistema__c/Sistema__c.object-meta.xml
<CustomObject>
    <label>Sistema</label>
    <nameField>
        <label>Nombre de Sistema</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sistemas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>