unpackaged/main/default/objects/Sistema__c/fields/Cert_Password__c.field-meta.xml
<CustomField>
    <fullName>Cert_Password__c</fullName>
    <label>Cert.Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>