unpackaged/main/default/objects/Sistema__c/fields/Certificado_Autofirmado__c.field-meta.xml
<CustomField>
    <fullName>Certificado_Autofirmado__c</fullName>
    <label>Certificado Autofirmado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>