unpackaged/main/default/objects/Sistema__c/fields/Certificado_Rec_Estatico__c.field-meta.xml
<CustomField>
    <fullName>Certificado_Rec_Estatico__c</fullName>
    <label>Certificado_Rec_Estatico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>