unpackaged/main/default/objects/Sistema__c/fields/Correo_Recep_XML_Direcciones__c.field-meta.xml
<CustomField>
    <fullName>Correo_Recep_XML_Direcciones__c</fullName>
    <description>Direcciones destino. Las direcciones se separan con dos puntos (&quot;:&quot;)</description>
    <inlineHelpText>Direcciones destino. Las direcciones se separan con dos puntos (&quot;:&quot;)</inlineHelpText>
    <label>Correo Recep.XML-Direcciones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>