unpackaged/main/default/objects/Sistema__c/fields/Correo_Recep_XML_Mensaje__c.field-meta.xml
<CustomField>
    <fullName>Correo_Recep_XML_Mensaje__c</fullName>
    <label>Correo Recep.XML-Mensaje</label>
    <length>255</length>
    <type>Text</type>
</CustomField>