unpackaged/main/default/objects/Sistema__c/fields/End_Point_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>End_Point_Descripcion__c</fullName>
    <label>End Point - Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>