unpackaged/main/default/objects/Sistema__c/fields/Limpieza_de_Aprob_Agendada__c.field-meta.xml
<CustomField>
    <fullName>Limpieza_de_Aprob_Agendada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Al activarse se agenda un JOB de acuerdo a la recurrencia capturada en &quot;Limpieza Recurrencia&quot;. El Id del JOB generado se guarda el &quot;Limpieza JOB Id&quot;. Al momento de ejecutarse el JOB debe existir un valor en Máxima antiguedad de días sin resolución.</description>
    <inlineHelpText>Al activarse se agenda un JOB de acuerdo a la recurrencia capturada en &quot;Limpieza Recurrencia&quot;. El Id del JOB generado se guarda el &quot;Limpieza JOB Id&quot;. Al momento de ejecutarse el JOB debe existir un valor en Máxima antiguedad de días sin resolución.</inlineHelpText>
    <label>Limpieza de Aprob.Agendada</label>
    <type>Checkbox</type>
</CustomField>