unpackaged/main/default/objects/Sistema__c/fields/Limpieza_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Limpieza_Job_Id__c</fullName>
    <description>El Id que genera Salesforce al agendar un JOB. Cuando ya está generado este Id puede utilizarse para detener el JOB.</description>
    <inlineHelpText>El Id que genera Salesforce al agendar un JOB. Cuando ya está generado este Id puede utilizarse para detener el JOB.</inlineHelpText>
    <label>Limpieza Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>