unpackaged/main/default/objects/Sistema__c/fields/Limpieza_Recurrencia__c.field-meta.xml
<CustomField>
    <fullName>Limpieza_Recurrencia__c</fullName>
    <description>Es la cadena de texto que utiliza el scheduler para saber la recurrencia del JOB.</description>
    <inlineHelpText>Es la cadena de texto que utiliza el scheduler para saber la recurrencia del JOB.</inlineHelpText>
    <label>Limpieza Recurrencia</label>
    <length>20</length>
    <type>Text</type>
</CustomField>