unpackaged/main/default/objects/Sistema__c/fields/Max_antiguedad_sin_resolucion__c.field-meta.xml
<CustomField>
    <fullName>Max_antiguedad_sin_resolucion__c</fullName>
    <description>Es un número entero. Es la máxima antigüedad de días para aprobaciones en estatus de &quot;En Proceso de Aprobación&quot;. Las que se encuentren fuera de este rango entran en la lista de remoción. Es necesario este  valor para activar la limpieza programada.</description>
    <inlineHelpText>Es un número entero. Es la máxima antigüedad de días para aprobaciones en estatus de &quot;En Proceso de Aprobación&quot;. Las que se encuentren fuera de este rango entran en la lista de remoción. Es necesario este valor para activar la limpieza programada.</inlineHelpText>
    <label>Máx.antigüedad sin resolución</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>